--- a/src/app/pages/components/actividad-m1/actividad-m1.component.html
+++ b/src/app/pages/components/actividad-m1/actividad-m1.component.html
@@ -1,63 +1,83 @@
 <section class="modulo1">
   <div class="row">
-    <div class="col-6 d-flex flex-column align-items-center justify-content-center">
+    <div class="modulo1-content col-6 d-flex flex-column align-items-center justify-content-center">
       <h2>MÓDULO 1</h2>
-      <p>INTRODUCCIÓN AL
-        COOPERATIVISMO</p>
+      <p>INTRODUCCIÓN AL</p>
+      <p>COOPERATIVISMO</p>
     </div>
-      <div class="col-6 d-flex flex-column align-items-center justify-content-center">
-        <!-- <img src="assets/course-1-3.png" alt=""> -->
+      <div class="col-6">
+        <div class="d-flex flex-column align-items-center justify-content-center">
+          <img src="assets/imagenPrueba.svg" alt="">
+        </div>
       </div>
   </div>
 </section>
 
 <section class="objetivo_general">
-  <h2>OBJETIVO GENERAL</h2>
-  <p>Lograr que los participantes
-    conozcan el Cooperativismo,
-    para comprender desde su
-    origen hasta la actualidad de
-    las Sociedades Cooperativas
-    de Ahorro y Préstamo.</p>
+  <div class="row">
+    <div class="col-6 align-items-center justify-content-center">
+      <div class="">
+        <img src="assets/imagenPrueba2.svg" alt="">
+      </div>
+    </div>
+    <div class="col-6  d-flex flex-column align-items-center justify-content-center">
+      <h2>OBJETIVO GENERAL</h2>
+      <p class="text-center">Lograr que los participantes
+        conozcan el Cooperativismo,
+        para comprender desde su
+        origen hasta la actualidad de
+        las Sociedades Cooperativas
+        de Ahorro y Préstamo.</p>
+    </div>
+  </div>
 </section>
+
+<div class="gradient"></div>
 
 <section class="tema">
-  <h3>TEMA</h3>
-  <p><strong>¿Qué es el Cooperativismo?</strong>
-    Antecedentes históricos del Cooperativismo
-    <strong>Actividad:</strong> Crucigrama
-    Símbolos del Cooperativismo
-    Retroalimentación
-  </p>
+  <div class="bgpapel">
+    <h2>TEMA</h2>
+    <ul>
+      <li>¿Qué es el Cooperativismo?</li>
+      <li>Antecedentes históricos del Cooperativismo</li>
+      <li>Actividad: Crucigrama</li>
+      <li>Símbolos del Cooperativismo</li>
+      <li>Retroalimentación</li>
+    </ul>
+  </div>
 </section>
 
-<section class="introduccion">
-  <h2>INTRODUCCIÓN</h2>
-  <p>A través de la historia los valores de
-    solidaridad, colectivimo y acción
-    común han estado presentes en la
-    organización económica de las
-    sociedades, aunque no es hasta el
-    siglo XIX cuando con la formulación
-    de principios y una filosofía basados
-    en la concepción social que propone
-    la cooperación y apoyo mutuo entre
-    individuos que, previamente han
-    acordado asociarse libre y
-    voluntariamente para satisfacer sus
-    necesidades económicas, sociales y
-    culturales, siendo así como poco a
-    poco se conformó el Cooperativismo.
+<div class="gradient2"></div>
 
-    De esta forma comprender cómo, por
-    qué y dónde se inició el pensamiento
-    cooperativista, las distintas doctrinas
-    filosóficas que generaron la creación
-    de Cooperativas en numerosas partes
-    del planeta. Además, los beneficios
-    de una adecuada administración del
-    dinero para mejorar la calidad de vida
-    de una persona y su familia.</p>
+<section class="introduccion">
+  <div class="int-content text-center">
+    <h2>INTRODUCCIÓN</h2>
+    <p>A través de la historia los valores de
+      solidaridad, colectivimo y acción
+      común han estado presentes en la
+      organización económica de las
+      sociedades, aunque no es hasta el
+      siglo XIX cuando con la formulación
+      de principios y una filosofía basados
+      en la concepción social que propone
+      la cooperación y apoyo mutuo entre
+      individuos que, previamente han
+      acordado asociarse libre y
+      voluntariamente para satisfacer sus
+      necesidades económicas, sociales y
+      culturales, siendo así como poco a
+      poco se conformó el Cooperativismo.
+
+      De esta forma comprender cómo, por
+      qué y dónde se inició el pensamiento
+      cooperativista, las distintas doctrinas
+      filosóficas que generaron la creación
+      de Cooperativas en numerosas partes
+      del planeta. Además, los beneficios
+      de una adecuada administración del
+      dinero para mejorar la calidad de vida
+      de una persona y su familia.</p>
+  </div>
 </section>
 
 <section class="que_es_cooperativismo">
