--- a/src/app/pages/page/perfil/perfil.component.html
+++ b/src/app/pages/page/perfil/perfil.component.html
@@ -8,9 +8,9 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">{{name}}</h5>
-                <p class="card-text"><strong>Número de Socio: </strong>{{nSocio}}</p>
-                <p class="card-text"><strong>Correo: </strong>{{ correo }}</p>
+                <h5 class="card-title">{{usuario.name}}</h5>
+                <p class="card-text"><strong>Número de Socio: </strong>{{usuario.nSocio}}</p>
+                <p class="card-text"><strong>Correo: </strong>{{ usuario.email }}</p>
                 <p class="card-text"><strong>Teléfono: </strong></p>
                 <p class="card-text"><strong>Domicilio: </strong></p>
                 <p class="card-text"><small class="text-muted"></small></p>
