--- a/src/app/pages/page/modulo1/modulo1.component.css
+++ b/src/app/pages/page/modulo1/modulo1.component.css
@@ -62,33 +62,28 @@
 
 
 }
+*{
 
+  font-family: "Century Gothic", Times, sans-serif;
+}
 
 .cover {
-  width: 100%;
   height: 450px;
   margin-bottom: 100px;
-  padding-bottom: 60px;
-  font-family: "Century Gothic", Times, sans-serif;
   margin-top: 150px;
   background-image: url(/assets/fondot2.png);
   background-size: cover;
-  background-position: bottom;
 }
 
 .container__cover {
   max-width: 1200px;
   margin: auto;
   padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
 }
 
 .cover .container__info {
   max-width: 400px;
   margin-top: 40px;
-  z-index: 2;
 }
 
 .cover h1 {
@@ -154,19 +149,7 @@
   box-shadow: 1px 1px 30px -5px #20202095;
 }
 
-/*------------------------------- FIN DE BOTONES -----------------------*/
-
-
-/*IMAGEN DE PORTADA CON ANIMACION*/
-.container__vector {
-  margin-left: 50%;
-  /*centrar la portada del header*/
-  position: relative;
-}
-
 .container__vector img {
-  position: absolute;
-  right: 0;
   width: 600px;
   -webkit-animation: move_vector 4s ease-in-out infinite;
   animation: move_vector 4s ease-in-out infinite;
@@ -207,23 +190,13 @@
 
 /*/////// Contenedor del titulo del tema /////////////////////*/
 .tema {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 50px;
 }
 
 /*Contenedor del texto del tirulo el espacio que abarca*/
 .container__titulo {
-  width: 1200px;
+  margin: 0 auto;
   padding: 20px 0;
-  display: flex;
-  z-index: 2;
-  background-image: url(/assets/fondot2.png);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 /*Estilos del titulo "Temario" */
@@ -295,34 +268,20 @@
 /*=======================================*/
 /*DISEÑO DE LA ACTIVIDAD CRUCIGRAMA*/
 
-.container__actividad {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 0px;
-  height: auto;
-}
+
 
 .titulo__actividad {
   width: 65%;
   color: var(--color-blanco);
   background: var(--color-secundario);
   border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   margin-bottom: 50px;
 }
 
 .txt__actividad {
-  padding-left: 50px;
-  width: 90%;
+  padding: 35px;
   font-size: 20px;
   color: var(--color-negro);
-  text-align: justify;
 }
 
 /*ESTILOS PARA EL MENSAJE DE ACT APROBADA*/
@@ -372,8 +331,7 @@
 /*BOTON "COMENZAR" DE LA ACTIVIDAD CRUCIGRAMA*/
 .container__actividad input[type="button"] {
   padding: 10px 30px;
-  margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
   font-size: 18px;
   font-weight: 600;
   border: none;
@@ -382,7 +340,6 @@
   border-radius: 20px;
   box-shadow: 1px 1px 30px -5px #20202049;
   cursor: pointer;
-  transition: box-shadow 500ms;
 }
 
 /*CONTENEDOR DEL CRUCIGRAMA*/
