--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container__footer">
+  <div class="container__footer d-flex flex-wrap justify-content-between">
 
     <div class="waves">
       <div class="wave" id="wave1"></div>
@@ -8,15 +8,15 @@
       <div class="wave" id="wave4"></div>
     </div>
 
-    <div class="row">
+    <div class="row" style="--bs-gutter-x: 0rem">
 
-      <div class="box__footer col">
+      <div class="box__footer col d-flex flex-column align-items-center">
         <div class="logo">
           <img src="/assets/logo-Buro.png" width="200px" alt="">
         </div>
       </div>
 
-      <div class="box__footer col">
+      <div class="box__footer d-flex flex-column col text-center text-md-start">
         <h2>ENLACES WEB</h2>
         <a href="https://www.libertadsanpablo.com/page61.html" target="_blank">Aviso de Privacidad</a>
         <a href="https://www.gob.mx/condusef" target="_blank">Condusef</a>
@@ -26,7 +26,7 @@
         <a href="https://www.libertadsanpablo.com/assets/files/CostosYComiciones_Agosto-2023.pdf" target="_blank">Costos y Comisiones</a>
       </div>
 
-      <div class="box__footer col">
+      <div class="box__footer d-flex flex-column col text-center text-md-start">
         <h2>ENLACES ÚTILES</h2>
         <a href="https://www.libertadsanpablo.com/page48.html" target="_blank">Saldos en Línea</a>
         <a href="https://www.libertadsanpablo.com/page53.html" target="_blank">Quiero Ser Socio</a>
@@ -35,8 +35,8 @@
         <a href="https://www.libertadsanpablo.com/page44.html" target="_blank">Historia</a>
       </div>
 
-      <div class="box__footer col">
-        <h2>S Í G U E N O S</h2>
+      <div class="box__footer d-flex flex-column col text-center text-md-start">
+        <h2>SÍGUENOS</h2>
         <p>REDES SOCIALES</p>
         <a href="https://www.facebook.com/CajaSanPabloOficial" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
         <a href="https://twitter.com/cajasanpablo" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a>
@@ -46,7 +46,7 @@
 
     </div>
   </div>
-  <div class="box__copyright">
+  <div class="box__copyright text-center">
     <hr>
     <p> <i class="far fa-copyright"></i> 2015 - 2022 Caja Popular San Pablo S.C. de A.P. de R.L. de C.V.<br>
       <b>Reservados todos los derechos.</b>
